@@ -5,12 +5,13 @@
 	<th:block th:fragment="footer">
 		<footer>
 			<div class="container">
-				<p>
-					&copy; <span th:text="#{footer.copywriteNotice}"></span> <span
+				<p id="footer">
+					&copy; <span th:text="#{footer.copywriteNotice}"></span>
+					<!-- for debug <span
 						sec:authorize="isAuthenticated()" style="display: inline-block;">
 						| Logged user: <span sec:authentication="name"></span> | Roles: <span
 						sec:authentication="principal.authorities"></span> | <a
-						th:href="@{/logout}">Sign Out</a>
+						th:href="@{/logout}">Sign Out</a>  -->
 					</span>
 				</p>
 			</div>
@@ -20,8 +21,8 @@
     <script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
      -->
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+     
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
