@@ -15,6 +15,9 @@
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    
+    
 	<!--     
     <link rel="stylesheet" type="text/javascript"
 			th:src="@{/webjars/jquery/3.4.1/jquery.min.js/}"></script>
